--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -3,6 +3,7 @@
 /* You can override the default Infima variables here. */
 :root {
   --ifm-color-primary: #2e8555;
+
   --ifm-color-primary-dark: #29784c;
   --ifm-color-primary-darker: #277148;
   --ifm-color-primary-darkest: #205d3b;
@@ -14,43 +15,44 @@
 }
 
 [data-theme='light']{
-    --md-sys-color-background:#fff8f5;
-    --md-sys-color-on-background:#211a16;
-    --md-sys-color-surface:#fff8f5;
-    --md-sys-color-surface-dim:#e5d7d1;
-    --md-sys-color-surface-bright:#fff8f5;
+    --md-sys-color-background:#fff8f6;
+    --md-sys-color-on-background:#251916;
+    --md-sys-color-surface:#fff8f6;
+    --md-sys-color-surface-dim:#ecd5d0;
+    --md-sys-color-surface-bright:#fff8f6;
     --md-sys-color-surface-container-lowest:#ffffff;
-    --md-sys-color-surface-container-low:#fff1ea;
-    --md-sys-color-surface-container:#f9ebe4;
-    --md-sys-color-surface-container-high:#f4e5df;
-    --md-sys-color-surface-container-highest:#eee0d9;
-    --md-sys-color-on-surface:#211a16;
-    --md-sys-color-surface-variant:#f5ded2;
-    --md-sys-color-on-surface-variant:#53443b;
-    --md-sys-color-inverse-surface:#372f2b;
-    --md-sys-color-inverse-on-surface:#fceee7;
-    --md-sys-color-outline:#867369;
-    --md-sys-color-outline-variant:#d8c2b6;
+    --md-sys-color-surface-container-low:#fff1ed;
+    --md-sys-color-surface-container:#ffe9e4;
+    --md-sys-color-surface-container-high:#fae3de;
+    --md-sys-color-surface-container-highest:#f5ded8;
+    --md-sys-color-on-surface:#251916;
+    --md-sys-color-surface-variant:#fddbd3;
+    --md-sys-color-on-surface-variant:#58413c;
+    --md-sys-color-inverse-surface:#3b2d2a;
+    --md-sys-color-inverse-on-surface:#ffede9;
+    --md-sys-color-outline:#8c716b;
+    --md-sys-color-outline-variant:#dfbfb8;
     --md-sys-color-shadow:#000000;
     --md-sys-color-scrim:#000000;
-    --md-sys-color-surface-tint:#8d4e21;
-    --md-sys-color-primary:#8d4e21;
+    --md-sys-color-surface-tint:#a9381b;
+    --md-sys-color-primary:#882104;
     --md-sys-color-on-primary:#ffffff;
-    --md-sys-color-primary-container:#e1935f;
-    --md-sys-color-on-primary-container:#2f1200;
-    --md-sys-color-inverse-primary:#ffb689;
-    --md-sys-color-secondary:#795742;
+    --md-sys-color-primary-container:#ba4426;
+    --md-sys-color-on-primary-container:#ffffff;
+    --md-sys-color-inverse-primary:#ffb4a2;
+    --md-sys-color-secondary:#8b4e3f;
     --md-sys-color-on-secondary:#ffffff;
-    --md-sys-color-secondary-container:#ffd7c0;
-    --md-sys-color-on-secondary-container:#5e3f2b;
-    --md-sys-color-tertiary:#616212;
+    --md-sys-color-secondary-container:#ffbaa9;
+    --md-sys-color-on-secondary-container:#5d2a1d;
+    --md-sys-color-tertiary:#745b00;
     --md-sys-color-on-tertiary:#ffffff;
-    --md-sys-color-tertiary-container:#a8a954;
-    --md-sys-color-on-tertiary-container:#1a1b00;
+    --md-sys-color-tertiary-container:#c9a844;
+    --md-sys-color-on-tertiary-container:#2a1f00;
     --md-sys-color-error:#ba1a1a;
     --md-sys-color-on-error:#ffffff;
     --md-sys-color-error-container:#ffdad6;
     --md-sys-color-on-error-container:#410002;
+
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
@@ -63,4 +65,43 @@
   --ifm-color-primary-lighter: #32d8b4;
   --ifm-color-primary-lightest: #4fddbf;
   --docusaurus-highlighted-code-line-bg: rgba(210, 63, 63, 0.3);
+
+  /* Dark theme system colors */
+--md-sys-color-background: #251916;
+--md-sys-color-on-background: #ece0dd;
+--md-sys-color-surface: #251916;
+--md-sys-color-surface-dim: #151009;
+--md-sys-color-surface-bright: #3b2d2a;
+--md-sys-color-surface-container-lowest: #1d110e;
+--md-sys-color-surface-container-low: #251916;
+--md-sys-color-surface-container: #2c201d;
+--md-sys-color-surface-container-high: #332723;
+--md-sys-color-surface-container-highest: #3b2d2a;
+--md-sys-color-on-surface: #ece0dd;
+--md-sys-color-surface-variant: #58413c;
+--md-sys-color-on-surface-variant: #dfbfb8;
+--md-sys-color-inverse-surface: #ece0dd;
+--md-sys-color-inverse-on-surface: #3b2d2a;
+--md-sys-color-outline: #a08c87;
+--md-sys-color-outline-variant: #58413c;
+--md-sys-color-shadow: #000000;
+--md-sys-color-scrim: #000000;
+--md-sys-color-surface-tint: #ffb4a2;
+--md-sys-color-primary: #ffb4a2;
+--md-sys-color-on-primary: #5c1900;
+--md-sys-color-primary-container: #882104;
+--md-sys-color-on-primary-container: #ffdbd1;
+--md-sys-color-inverse-primary: #ba4426;
+--md-sys-color-secondary: #ffb4a2;
+--md-sys-color-on-secondary: #492012;
+--md-sys-color-secondary-container: #633b2e;
+--md-sys-color-on-secondary-container: #ffdbd1;
+--md-sys-color-tertiary: #eac94f;
+--md-sys-color-on-tertiary: #3d2f00;
+--md-sys-color-tertiary-container: #c9a844;
+--md-sys-color-on-tertiary-container: #ffe08f;
+--md-sys-color-error: #ffb4ab;
+--md-sys-color-on-error: #690005;
+--md-sys-color-error-container: #93000a;
+--md-sys-color-on-error-container: #ffdad6;
 }
