--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -105,3 +105,44 @@
 --md-sys-color-error-container: #93000a;
 --md-sys-color-on-error-container: #ffdad6;
 }
+
+
+.w-80{
+  width: 80%;
+}
+
+
+.rows{
+    display: flex;
+    padding: 1rem;
+    flex-direction: column;
+    gap: 1rem;
+}
+.muneer-img{
+    width: 800px;
+    border-radius: 50%;
+    object-fit: cover;
+    aspect-ratio: 1 /  1;
+    align-self: center;
+    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+}
+.cols{
+    padding: 1rem;
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+}
+.flex-start{
+    justify-content: flex-start;
+}
+.flex-center{
+
+    justify-content: center;
+
+}
+.ul{
+    text-decoration: underline;
+}
+.text-orange{
+    color: var(--md-sys-color-tertiary-container);
+}
