adding personal information to the home p age

--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -23,15 +23,38 @@
     aspect-ratio: 1 / 1;
     border-radius: 50%;
 }
+
 .image-container h1 {
   color: var(--md-sys-color-on-surface);
   font-size: 3rem;
-  text-align: center;
+
 }
 
 .image-container .subtitle{
     color: var(--md-sys-color-on-surface-variant);
-    font-weight: bold;
+    font-weight: normal;
     font-size: 1.5rem;
     text-align: center;
+}
+
+
+@keyframes typewriter {
+  0% {
+    width: 0px;
+  }
+
+  100% {
+    width: 240px;
+  }
+}
+
+@keyframes blink {
+  0% {
+    border-right-color: rgba(255,255,255,.75);
+    ;
+  }
+
+  100% {
+    border-right-color: transparent;
+  }
 }
