--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -149,3 +149,28 @@
 .gap-lg{
     gap: 2rem;
 }
+
+.link{
+    color: var(--md-sys-color-surface-dim);
+    text-decoration: none;
+    transition: color 0.2s ease;
+}
+.p-0{
+    padding: 0;
+}
+.gap-md{
+    gap:1rem;
+}
+.gap-0{
+    gap:0;
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns:1fr 1fr;
+  gap: 1rem;
+  padding: 1rem;
+}
+.col-span-2{
+    grid-column: span 2;
+}
