--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -161,6 +161,9 @@
 .gap-md{
     gap:1rem;
 }
+.gap-sm{
+    gap:.5rem;
+}
 .gap-0{
     gap:0;
 }
@@ -173,4 +176,7 @@
 }
 .col-span-2{
     grid-column: span 2;
+}
+.col-span-3{
+        grid-template-columns: 1fr 1fr 1fr;
 }
