--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -20,7 +20,7 @@
     --md-sys-color-surface:#fff8f6;
     --md-sys-color-surface-dim:#ecd5d0;
     --md-sys-color-surface-bright:#fff8f6;
-    --md-sys-color-surface-container-lowest:#ffffff;
+    --md-sys-color-surface-container-lowest:#e7e7e7;
     --md-sys-color-surface-container-low:#fff1ed;
     --md-sys-color-surface-container:#ffe9e4;
     --md-sys-color-surface-container-high:#fae3de;
@@ -52,6 +52,7 @@
     --md-sys-color-on-error:#ffffff;
     --md-sys-color-error-container:#ffdad6;
     --md-sys-color-on-error-container:#410002;
+    --md-sys-color-tertiary-custom:#4c4fe7;
 
 }
 
@@ -104,8 +105,22 @@
 --md-sys-color-on-error: #690005;
 --md-sys-color-error-container: #93000a;
 --md-sys-color-on-error-container: #ffdad6;
+--md-sys-color-tertiary-custom:#c9a844
 }
 
+.token-line {
+    display: block;
+    padding: 0.5em;
+    margin: 0;
+    border-left: 0.25em solid var(--md-sys-color-surface-container-lowest);
+    background-color: var(--md-sys-color-surface-container-lowest);
+    color: var(--md-sys-color-tertiary-custom) !important;
+}
+.language-php,
+.language-yaml{
+
+    background-color: var(--md-sys-color-surface-container-lowest) !important;
+}
 
 .w-80{
   width: 80%;
