fix: Set height for sidebar navbar to improve layout

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -577,6 +577,8 @@ html {
 }
 .navbar-sidebar, .navbar-sidebar__backdrop {
     /* bottom: 0; */
+    height: 300px;
+    
     opacity: 0;
     position: fixed;
     transition-duration: var(--ifm-transition-fast);
