--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -87,6 +87,12 @@
         margin-bottom: 2rem;
     }
 }
+.link{
+    color: #ffffff;
+    text-decoration: none;
+    font-weight: 600;
+    transition: color 0.3s ease;
+}
 
 @media (max-width: 480px) {
     .image-container {
